--- a/references.bib
+++ b/references.bib
@@ -5,3 +5,40 @@
   author={Radečić, Dario},
   year={2024}
 } 
+
+@book{wickham2019advanced,
+  title={Advanced r},
+  author={Wickham, Hadley},
+  year={2019},
+  publisher={chapman and hall/CRC}
+}
+
+@Book{russell2022statistics,
+  title     = {Statistics in Natural Resources: Applications with R},
+  publisher = {Chapman and Hall/CRC},
+  year      = {2022},
+  author    = {Russell, Matthew},
+}
+
+@book{grolemund2014hands,
+  title={Hands-on programming with R: Write your own functions and simulations},
+  author={Grolemund, Garrett},
+  year={2014},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+@Book{Boslaugh2012,
+  author    = {Boslaugh, S.},
+  publisher = {O'Reilly Media, Incorporated},
+  title     = {Statistics in a Nutshell, 2nd Edition},
+  year      = {2012},
+  isbn      = {9781449361129},
+  url       = {https://books.google.com.ng/books?id=s1llAQAACAAJ},
+}
+
+@book{boehmke2019hands,
+  title={Hands-on machine learning with R},
+  author={Boehmke, Brad and Greenwell, Brandon M},
+  year={2019},
+  publisher={Chapman and Hall/CRC}
+}
