--- a/references.bib
+++ b/references.bib
@@ -42,3 +42,10 @@
   year={2019},
   publisher={Chapman and Hall/CRC}
 }
+
+@book{peng2016r,
+  title={R programming for data science},
+  author={Peng, Roger D},
+  year={2016},
+  publisher={Leanpub Victoria, BC, Canada}
+}
